--- a/weather.html
+++ b/weather.html
@@ -12,11 +12,11 @@
  <body>
      <div class="container">
         <div class="srh">
-            <input type="text" id="inp" value="pune" placeholder="Enter Location">
+            <input type="text" id="inp" value="" placeholder="Enter Location">
             <button onclick="myFun()">Search</button>
         </div>
         <h2 id="city"> </h2>
-        <img id="img" src="cloud.jpg" alt="">
+        <img id="img" src="" alt="">
         <h2 id="temp"> </h2>
         <h2 id="type"> </h2>
 
